--- a/20/homework_20.4
+++ b/20/homework_20.4
@@ -1,8 +1,6 @@
-cursor = connection.cursor()
-    query = ('CREATE TABLE IF NOT EXISTS users ('
-             'id INTEGER PRIMARY KEY,'
-             'first_name TEXT UNIQUE,'
-             'last_name TEXT UNIQUE,'
-             'age INTEGER)')
-    cursor.execute(query)
-    connection.commit()
+
+'CREATE TABLE IF NOT EXISTS users ('
+         'id INTEGER PRIMARY KEY,'
+         'first_name TEXT UNIQUE,'
+         'last_name TEXT UNIQUE,'
+         'age INTEGER)'
