--- a/20/Homework_20.1
+++ b/20/Homework_20.1
@@ -1,8 +1,6 @@
-cursor = connection.cursor()
-    query = ('CREATE TABLE IF NOT EXISTS users ('
-             'id INTEGER PRIMARY KEY AUTOINCREMENT,'
-             'first_name TEXT,'
-             'last_name TEXT,'
-             'age INTEGER)')
-    cursor.execute(query)
-    connection.commit()
+
+'CREATE TABLE IF NOT EXISTS users
+    'id INTEGER PRIMARY KEY AUTOINCREMENT,'
+    'first_name TEXT,'
+    'last_name TEXT,'
+    'age INTEGER)'
