--- a/20/homework_20.2
+++ b/20/homework_20.2
@@ -1,16 +1,11 @@
-cursor = connection.cursor()
 
-    person = [
+     [
         ('Guido', 'Van Rossum', 67),
         ('Linus', 'Torvalds', 54),
         ('Mark', 'Zuckerberg', 39),
         ('Elon', 'Musk', 52),
         ('Bill', 'Gates', 68), ]
 
-    query = 'INSERT INTO users (first_name, last_name, age) values (?, ? , ?)'
-    cursor.executemany(query, person)
-    connection.commit()
+    INSERT INTO users (first_name, last_name, age) VALUES (?, ? , ?)
 
-    query = 'SELECT * FROM users'
-    res = cursor.execute(query)
-    pprint(res.fetchall())
+
