--- a/20/homework_20.3
+++ b/20/homework_20.3
@@ -1,8 +1,6 @@
-cursor = connection.cursor()
-    query = ('CREATE TABLE IF NOT EXISTS users ('
-             'id INTEGER PRIMARY KEY AUTOINCREMENT,'
-             'first_name TEXT NOT NULL,'
-             'last_name TEXT NOT NULL,'
-             'age INTEGER)')
-    cursor.execute(query)
-    connection.commit()
+
+'CREATE TABLE IF NOT EXISTS users ('
+    'id INTEGER PRIMARY KEY AUTOINCREMENT,'
+    'first_name TEXT NOT NULL,'
+    'last_name TEXT NOT NULL,'
+    'age INTEGER)'
