--- a/20/homework_20.2
+++ b/20/homework_20.2
@@ -1,11 +1,10 @@
 
-     [
-        ('Guido', 'Van Rossum', 67),
-        ('Linus', 'Torvalds', 54),
-        ('Mark', 'Zuckerberg', 39),
-        ('Elon', 'Musk', 52),
-        ('Bill', 'Gates', 68), ]
+INSERT INTO users (first_name, last_name, age) VALUES
+    ('Guido', 'Van Rossum', 67),
+    ('Linus', 'Torvalds', 54),
+    ('Mark', 'Zuckerberg', 39),
+    ('Elon', 'Musk', 52),
+    ('Bill', 'Gates', 68)
 
-    INSERT INTO users (first_name, last_name, age) VALUES (?, ? , ?)
 
 
