--- a/20/homework_20.4
+++ b/20/homework_20.4
@@ -1,6 +1,8 @@
 
 'CREATE TABLE IF NOT EXISTS users ('
-         'id INTEGER PRIMARY KEY,'
-         'first_name TEXT UNIQUE,'
-         'last_name TEXT UNIQUE,'
-         'age INTEGER)'
+    'id INTEGER PRIMARY KEY,'
+    'first_name TEXT NOT NULL,'
+    'last_name TEXT NOT NULL,'
+    'age INTEGER,
+     UNIQUE (first_name, last_name) ON CONFLICT ABORT
+    )'
